# shortcut-hero

./: .gitignore  Cargo.toml  README.md  shortcut-gpt.example.json  shortcut-hero.example.json
.github/workflows/: cargo.yml
bindings/: Action.ts  KeybdKeyDef.ts
src/: config.rs  evaluation.rs  hotkey.rs  lib.rs  main.rs
src/actions/: basic.rs  clipboard.rs  core.rs  mod.rs  openai.rs
